# CRasterizer

./: CMakeLists.txt  ImportObj.c  ImportObj.h  calcs.c  calcs.h  eventMgr.c  eventMgr.h  main.c  renderer.c  renderer.h
.github/workflows/: codeql.yml
